[package]
name = "bevy_procedural_landmass"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"
bevy-inspector-egui = "0.19"
futures-lite = "1.11.3"
noisy_bevy = "0.4"
fastrand = "2.0.0"
pretty-type-name = "1.0"
#bevy_xpbd_3d = "0.2"
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main" }
[dev-dependencies]
example_common = { path = "../example_common" }

[features]
default = []
debug_rain = []


